# hw5

./: CMakeLists.txt  README.md
include/: hw5.cuh  util.hpp
src/: hw5.cpp  hw5.cu
